# StickerGenerator-alg

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  page.cpp  page.h  sticker.cpp  sticker.h
